[package]
name = "yew-html-ext"
version = "0.1.0"
edition = "2021"
authors = ["Tim Kurdov <tim.kurdov@gmail.com>"]
repository = "https://github.com/schvv31n/yew-html-ext"
license = "MIT"
keywords = ["web", "wasm", "frontend", "webasm", "webassembly", "yew"]
categories = ["gui", "web-programming", "wasm"]
description = "Handy syntactic extensions to Yew's HTML"
rust-version = "1.67.0"

[lib]
proc-macro = true

[dependencies]
proc-macro-error = "1"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits", "visit-mut"] }
once_cell = "1"

# testing
[dev-dependencies]
rustversion = "1"
trybuild = "1"
yew = "0.21.0"
