[package]
name = "yew-html-ext"
version = "0.1.1"
edition = "2021"
authors = ["Tim Kurdov <tim.kurdov@gmail.com>"]
repository = "https://github.com/schvv31n/yew-html-ext"
license = "MIT"
keywords = ["web", "wasm", "frontend", "webassembly", "yew"]
categories = ["gui", "web-programming", "wasm"]
description = "Handy syntactic extensions for Yew's HTML macros"
rust-version = "1.67.0"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro-error = "1"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits", "visit-mut"] }
once_cell = "1"

[target.'cfg(doc)'.dependencies]
yew = "0.21"

# testing
[dev-dependencies]
rustversion = "1"
trybuild = "1"
yew = "0.21.0"
